--- a/Web/Default.master
+++ b/Web/Default.master
@@ -11,19 +11,19 @@
 	<form id="form1" runat="server">
 
 		<div class="header">
-			<h1>Your Name Here</h1>
-			<h2>My Personal Site</h2>
+			<h1><asp:Literal ID="Literal1" runat="server" Text="<%$ Resources:LocalizedText, YourNameHere %>" /></h1>
+			<h2><asp:Literal ID="Literal2" runat="server" Text="<%$ Resources:LocalizedText, MyPersonalSite %>" /></h2>
 			<asp:menu id="menua" runat="server" 
 				datasourceid="SiteMapDataSource1" 
 				cssclass="menua" 
 				orientation="Horizontal" 
 				maximumdynamicdisplaylevels="0" 
 				skiplinktext="" 
-				staticdisplaylevels="2" />
+				staticdisplaylevels="2" meta:resourcekey="menuaResource1" />
 			<div class="nav">
-				<asp:SiteMapPath id="SiteMapPath1" runat="Server" PathSeparator=" > " RenderCurrentNodeAsLink="true" />
+				<asp:SiteMapPath id="SiteMapPath1" runat="Server" RenderCurrentNodeAsLink="True" meta:resourcekey="SiteMapPath1Resource1" />
 				&nbsp; | &nbsp;
-				<asp:LoginStatus ID="LoginStatus1" Runat="server" />
+				<asp:LoginStatus ID="LoginStatus1" Runat="server" meta:resourcekey="LoginStatus1Resource1" />
 			</div>
 		</div>
 
@@ -37,12 +37,12 @@
 					orientation="Horizontal" 
 					maximumdynamicdisplaylevels="0" 
 					skiplinktext="" 
-					staticdisplaylevels="2" />
-				Copyright &copy; 2005 Your Name here.
+					staticdisplaylevels="2" meta:resourcekey="menubResource1" />
+                <asp:Literal ID="Literal3" runat="server" Text="<%$ Resources:LocalizedText, Copyright %>" />
 			</div>
 		</div>
 
-		<asp:sitemapdatasource id="SiteMapDataSource1" runat="server" startingnodeoffset="0" />
+		<asp:sitemapdatasource id="SiteMapDataSource1" runat="server" />
 	
 	</form>
 	
